[package]
name = "lumber"
version = "0.1.0"
authors = ["Theo Puranen Åhfeldt <34159999+theoahfeldt@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
image = "0.23"
itertools = "0.10"
nalgebra = "0.27"
rapier3d = "0.10"
glfw = "0.41"
luminance = "0.44"
luminance-derive = "0.7"
luminance-front = "0.4"
luminance-glfw = "0.16"
luminance-windowing = "0.10"
rusttype = "0.9"
